llamaindex in notebook

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,17 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5b803e87-1280-4d6a-9dcd-84c8938e0a36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ollama"
+    "from llama_index.core import Settings\n",
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "from llama_index.llms.ollama import Ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bab620f9-3935-4ab3-a473-e58f0b37a4a6",
    "metadata": {},
    "outputs": [],
@@ -37,63 +39,45 @@
     "# MODEL = \"deepseek-r1:14b\"\n",
     "# MODEL = \"llama3.3:70b\"\n",
     "\n",
-    "EMBEDDER = \"all-minilm\" # 384\n",
+    "EMBEDDER = \"all-minilm\"  # 384\n",
     "# EMBEDDER = \"nomic-embed-text\" # 768\n",
     "# EMBEDDER = \"bge-m3\" # 1024\n",
-    "# EMBEDDER = MODEL"
+    "# EMBEDDER = MODEL\n",
+    "\n",
+    "llm = Ollama(model=MODEL, request_timeout=60.0)\n",
+    "# Settings.llm = llm\n",
+    "Settings.embed_model = OllamaEmbedding(model_name=EMBEDDER)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb6e3d14-faf3-443b-82fe-f401a2baa245",
+   "id": "09dd0dde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stream = ollama.chat(\n",
-    "    model=MODEL,\n",
-    "    messages=[{'role': 'user', 'content': 'Why is the sky blue?'}],\n",
-    "    stream=True,\n",
-    ")\n",
-    "\n",
-    "for chunk in stream:\n",
-    "    print(chunk['message']['content'], end='', flush=True)"
+    "response = llm.complete(\"What is the capital of France?\")\n",
+    "print(response)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1874d346-4ab4-4bd3-9b7c-865a64c74989",
+   "id": "ed0d8831",
    "metadata": {},
    "outputs": [],
    "source": [
-    "embed_response = ollama.embed(\n",
-    "    model=MODEL,\n",
-    "    # model=EMBEDDER,\n",
-    "    input=[\n",
-    "        \"The sky is blue because of rayleigh scattering\",\n",
-    "        \"Grass is green because of chlorophyll\",\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "print(len(embed_response.embeddings))\n",
-    "print(len(embed_response.embeddings[0]))"
+    "response = llm.stream_complete(\"Tell me a short story about a robot.\")\n",
+    "for token in response:\n",
+    "    print(token.delta, end=\"\", flush=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "603961a9-7bee-45c1-8f5c-6ec12d284f28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "rag313",
    "language": "python",
-   "name": "rag313"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
