Adding LangFuse Callback

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,19 +10,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5b803e87-1280-4d6a-9dcd-84c8938e0a36",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "from langfuse.llama_index import LlamaIndexCallbackHandler\n",
     "from llama_index.core import Settings\n",
+    "from llama_index.core.callbacks import CallbackManager\n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "from llama_index.llms.ollama import Ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "20b142cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langfuse_callback_handler = LlamaIndexCallbackHandler(\n",
+    "    public_key=\"pk-lf-363e8a50-c2ef-4622-b47b-0fd9db3b90eb\",\n",
+    "    secret_key=os.environ[\"LANGFUSE_SECRET_KEY\"],\n",
+    "    host=\"http://localhost:3000\",\n",
+    ")\n",
+    "Settings.callback_manager = CallbackManager([langfuse_callback_handler])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "bab620f9-3935-4ab3-a473-e58f0b37a4a6",
    "metadata": {},
    "outputs": [],
