notebooks for ingest and llm inference

--- a/notebooks/ingest.ipynb
+++ b/notebooks/ingest.ipynb
@@ -5,7 +5,7 @@
    "id": "5275fb4f-12f6-4a58-972d-27fd761e04e5",
    "metadata": {},
    "source": [
-    "# RAG Sandbox"
+    "# Ingest"
    ]
   },
   {
@@ -15,11 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "from langfuse.llama_index import LlamaIndexCallbackHandler\n",
-    "from llama_index.core import Settings, StorageContext, load_index_from_storage\n",
-    "from llama_index.core.callbacks import CallbackManager\n",
+    "from llama_index.core import Settings, SimpleDirectoryReader, VectorStoreIndex\n",
+    "# from llama_index.core.node_parser import SentenceSplitter\n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "from llama_index.llms.ollama import Ollama\n",
     "from rich import print"
@@ -28,21 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "20b142cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "langfuse_callback_handler = LlamaIndexCallbackHandler(\n",
-    "    public_key=\"pk-lf-363e8a50-c2ef-4622-b47b-0fd9db3b90eb\",\n",
-    "    secret_key=os.environ[\"LANGFUSE_SECRET_KEY\"],\n",
-    "    host=\"http://localhost:3000\",\n",
-    ")\n",
-    "Settings.callback_manager = CallbackManager([langfuse_callback_handler])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "bab620f9-3935-4ab3-a473-e58f0b37a4a6",
    "metadata": {},
    "outputs": [],
@@ -66,78 +48,53 @@
     "\n",
     "llm = Ollama(model=MODEL, request_timeout=60.0)\n",
     "# Settings.llm = llm\n",
-    "Settings.embed_model = OllamaEmbedding(model_name=EMBEDDER)"
+    "Settings.embed_model = OllamaEmbedding(model_name=EMBEDDER)\n",
+    "\n",
+    "# Settings.text_splitter = SentenceSplitter(chunk_size=512, chunk_overlap=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a0c635f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = SimpleDirectoryReader(\"../data\").load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "93a5a877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(documents[100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0aa9819b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_index = VectorStoreIndex.from_documents(documents)\n",
+    "vector_index.storage_context.persist(persist_dir=\"../out/simple_default\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09dd0dde",
+   "id": "de13cf44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = llm.complete(\"What is the capital of France?\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ed0d8831",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# response = llm.stream_complete(\"Tell me a short story about a robot.\")\n",
-    "# for token in response:\n",
-    "#     print(token.delta, end=\"\", flush=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0c97d3c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "storage_context = StorageContext.from_defaults(persist_dir=\"../out/simple_default/\")\n",
-    "index = load_index_from_storage(storage_context)\n",
-    "query_engine = index.as_query_engine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea636ef2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# response = query_engine.query(\"Who is Tyler?\")\n",
-    "# response = query_engine.query(\"How many documents are there?\")\n",
-    "response = query_engine.query(\"What are the documents about?\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "486f8028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "query_engine = vector_index.as_query_engine()\n",
+    "\n",
     "response = query_engine.query(\"Who is Tyler?\")\n",
     "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "953525b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# response.response\n",
-    "response.source_nodes\n",
-    "# print(response.metadata)"
    ]
   }
  ],
