--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,19 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "5b803e87-1280-4d6a-9dcd-84c8938e0a36",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
+    "import nest_asyncio\n",
     "from langfuse.llama_index import LlamaIndexCallbackHandler\n",
     "from llama_index.core import Settings, StorageContext, load_index_from_storage\n",
     "from llama_index.core.callbacks import CallbackManager\n",
+    "from llama_index.core.evaluation import (FaithfulnessEvaluator,\n",
+    "                                         RetrieverEvaluator)\n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "from llama_index.llms.ollama import Ollama\n",
-    "from rich import print"
+    "from rich import print\n",
+    "\n",
+    "nest_asyncio.apply()"
    ]
   },
   {
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bab620f9-3935-4ab3-a473-e58f0b37a4a6",
    "metadata": {},
    "outputs": [],
@@ -94,14 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "0c97d3c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "storage_context = StorageContext.from_defaults(persist_dir=\"../out/simple_default/\")\n",
     "index = load_index_from_storage(storage_context)\n",
-    "query_engine = index.as_query_engine()"
+    "query_engine = index.as_query_engine()\n",
+    "\n",
+    "evaluator = FaithfulnessEvaluator(llm=llm)"
    ]
   },
   {
@@ -114,18 +121,14 @@
     "# response = query_engine.query(\"Who is Tyler?\")\n",
     "# response = query_engine.query(\"How many documents are there?\")\n",
     "response = query_engine.query(\"What are the documents about?\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "486f8028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = query_engine.query(\"Who is Tyler?\")\n",
-    "print(response)"
+    "# print(response)\n",
+    "print(response.response)\n",
+    "# print(response.source_nodes)\n",
+    "print(response.metadata)\n",
+    "\n",
+    "eval_result = evaluator.evaluate_response(response=response)\n",
+    "print(eval_result)\n",
+    "# print(str(eval_result.passing))"
    ]
   },
   {
@@ -135,9 +138,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# response.response\n",
-    "response.source_nodes\n",
-    "# print(response.metadata)"
+    "retriever_evaluator = RetrieverEvaluator.from_metric_names(\n",
+    "    [\"mrr\", \"hit_rate\", \"precision\", \"recall\", \"ap\"],\n",
+    "    retriever=query_engine.retriever,\n",
+    ")\n",
+    "eval_result = retriever_evaluator.evaluate(\n",
+    "    query=\"Who is Tyler?\",\n",
+    "    expected_ids=[\n",
+    "        # \"node_id1\",\n",
+    "        # \"node_id2\",\n",
+    "        \"13e70559-884b-4ea5-b318-36d53ff1caaa\",\n",
+    "    ],\n",
+    ")\n",
+    "print(eval_result)"
    ]
   }
  ],
